move domain logic into model